# polywog

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: banner.psd  header.psd
ci_suggestion/: cargo-deny.yml  ci.yml  deny.toml
crates/fey_color/: Cargo.toml
crates/fey_color/src/: channel.rs  conversion_traits.rs  grey.rs  grey_alpha.rs  hsl.rs  hsv.rs  lib.rs  oklab.rs  rgb.rs  rgba.rs
crates/fey_font/: Cargo.toml
crates/fey_font/src/: lib.rs
crates/fey_grid/: Cargo.toml
crates/fey_grid/src/: col.rs  col_iter.rs  cols_iter.rs  coord.rs  grid.rs  grid_buf.rs  grid_iter.rs  grid_mut.rs  lib.rs  row.rs  row_iter.rs  rows_iter.rs  view.rs
crates/fey_guid/: Cargo.toml
crates/fey_guid/src/: lib.rs
crates/fey_img/: Cargo.toml
crates/fey_img/src/: dyn_image.rs  image.rs  image_error.rs  image_format.rs  image_lua.rs  lib.rs  pixel.rs  png.rs  qoi_impl.rs
crates/fey_lua/: Cargo.toml
crates/fey_lua/src/: create_fill.rs  handle.rs  handle_ref.rs  instant_lua.rs  lib.rs  lua_module.rs  ops.rs  temp.rs  temp_members.rs  temp_types.rs  user_data_of.rs
crates/fey_math/: Cargo.toml
crates/fey_math/lua/: Affine2.lua  Affine3.lua  Cardinal.lua  Circle.lua  Line.lua  Mat2.lua  Mat3.lua  Mat4.lua  Num.lua  Octal.lua  Polygon.lua  Polygonal.lua  Projection.lua  Quad.lua  Rand.lua  Ray.lua  RayHit.lua  Rect.lua  Shape.lua  Triangle.lua  Vec2.lua  Vec3.lua  Vec4.lua
crates/fey_math/src/: affine2.rs  affine3.rs  angle.rs  cardinal.rs  circle.rs  degrees.rs  direction.rs  dyn_shape.rs  lib.rs  line.rs  mat2.rs  mat3.rs  mat4.rs  octal.rs  polygon.rs  projection.rs  quad.rs  radians.rs  ray.rs  ray_hit.rs  rect.rs  rotations.rs  shape.rs  traits.rs  transform.rs  triangle.rs  vec2.rs  vec3.rs  vec4.rs
crates/fey_math/src/lua/: affine2_lua.rs  affine3_lua.rs  cardinal_lua.rs  circle_lua.rs  line_lua.rs  mat2_lua.rs  mat3_lua.rs  mat4_lua.rs  mod.rs  num_lua.rs  octal_lua.rs  polygon_lua.rs  projection_lua.rs  quad_lua.rs  radians_lua.rs  ray_hit_lua.rs  ray_lua.rs  rect_lua.rs  shape_lua.rs  triangle_lua.rs  vec2_lua.rs  vec3_lua.rs  vec4_lua.rs
crates/fey_math/src/macros/: impl_affine.rs  impl_angle.rs  impl_angle_op.rs  impl_approx.rs  impl_bytemuck.rs  impl_casts.rs  impl_direction.rs  impl_interp.rs  impl_mat.rs  impl_neg.rs  impl_op.rs  impl_op_scalar.rs  impl_serde.rs  impl_tuple_arr.rs  impl_vec.rs  mod.rs
crates/fey_packer/: Cargo.toml
crates/fey_packer/src/: item.rs  lib.rs  packed.rs  rect_packer.rs
crates/fey_rand/: Cargo.toml
crates/fey_rand/src/: lib.rs
crates/kero/: Cargo.toml  README.md
crates/kero/examples/controller/: Cargo.toml
crates/kero/examples/controller/src/: main.rs
crates/kero/examples/minimal/: Cargo.toml
crates/kero/examples/minimal/src/: main.rs
crates/kero/examples/minimal_lua/: Cargo.toml
crates/kero/examples/minimal_lua/lua/: Main.lua
crates/kero/examples/minimal_lua/src/: main.rs
crates/kero/examples/platformer/: Cargo.toml
crates/kero/examples/platformer/assets/: jelly.ase
crates/kero/examples/platformer/src/: guy.rs  level.rs  main.rs  vine.rs
crates/kero/examples/screen/: Cargo.toml
crates/kero/examples/screen/src/: main.rs
crates/kero/examples/shaders/: Cargo.toml
crates/kero/examples/shaders/assets/: invert_shader.wgsl
crates/kero/examples/shaders/src/: main.rs
crates/kero/examples/smooth_moves/: Cargo.toml
crates/kero/examples/smooth_moves/src/: main.rs
crates/kero/examples/surfaces/: Cargo.toml
crates/kero/examples/surfaces/src/: main.rs
crates/kero/examples/text/: Cargo.toml
crates/kero/examples/text/src/: main.rs
crates/kero/examples/texture_packer/: Cargo.toml
crates/kero/examples/texture_packer/src/: main.rs
crates/kero/examples/tiles/: Cargo.toml
crates/kero/examples/tiles/src/: main.rs
crates/kero/src/: lib.rs  new_game.rs
crates/kero/src/core/: app_handler.rs  context.rs  frame_timer.rs  game_builder.rs  time.rs
crates/kero/src/lua_modules/: gamepad_lua.rs  mod.rs
crates/kero_spr/: Cargo.toml  README.md
crates/kero_spr/examples/basics/: Cargo.toml
crates/kero_spr/examples/basics/src/: main.rs
crates/kero_spr/examples/basics_lua/: Cargo.toml
crates/kero_spr/examples/basics_lua/lua/: Main.lua
crates/kero_spr/examples/basics_lua/src/: main.rs
crates/kero_spr/lua/: SpritePacker.lua  SpriteSheet.lua
crates/kero_spr/src/: lib.rs  sprite.rs  sprite_anim.rs  sprite_atlas.rs  sprite_font.rs  sprite_glyph.rs  sprite_packer.rs  sprite_patch.rs  sprite_sheet.rs
crates/kero_spr/src/lua/: mod.rs  sprite_packer_lua.rs  sprite_sheet_lua.rs
examples/controller/: Cargo.toml
examples/minimal/: Cargo.toml
examples/minimal_lua/: Cargo.toml
examples/platformer/: Cargo.toml
examples/screen/: Cargo.toml
examples/shaders/: Cargo.toml
examples/smooth_moves/: Cargo.toml
examples/surfaces/: Cargo.toml
examples/text/: Cargo.toml
examples/texture_packer/: Cargo.toml
examples/tiles/: Cargo.toml
polywog/: Cargo.toml
polywog/lua/: App.lua  Draw.lua  Gamepad.lua  MouseButton.lua  Surface.lua  Texture.lua  Window.lua
polywog/src/: lib.rs  new_game.rs
polywog/src/core/: app_handler.rs  context.rs  display_mode.rs  frame_timer.rs  game.rs  game_builder.rs  game_error.rs  lua_app.rs  mod.rs  monitor.rs  time.rs  video_mode.rs  window.rs
polywog/src/gfx/: bindings.rs  blend_mode.rs  buffer_cache.rs  color_mode.rs  draw.rs  font.rs  graphics.rs  index_buffer.rs  mod.rs  params.rs  render_data.rs  sampler.rs  screen.rs  shader.rs  shader_default.wgsl  shader_footer.wgsl  sub_texture.rs  surface.rs  texture.rs  texture_format.rs  texture_packer.rs  texture_pixel.rs  topology.rs  vertex.rs  vertex_buffer.rs
polywog/src/input/: gamepad.rs  gamepad_axis.rs  gamepad_button.rs  gamepad_status.rs  gamepads.rs  key.rs  keyboard.rs  mod.rs  mouse.rs  mouse_button.rs  virtual_axis.rs  virtual_button.rs  virtual_controller.rs  virtual_source.rs  virtual_stick.rs
polywog/src/lua_modules/: app_lua.rs  draw_lua.rs  font_lua.rs  gamepad_lua.rs  key_lua.rs  keyboard_lua.rs  mod.rs  mouse_button_lua.rs  mouse_lua.rs  num.rs  window_lua.rs
(+15 files in other folders)
