[package]
name = "polywog"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
ab_glyph = "0.2.32"
approx = "0.5.1"
arrayvec = "0.7.6"
bytemuck = "1.24.0"
byteorder = "1.5.0"
compact_str = "0.9.0"
dpi = "0.1.2"
fey_color = { version = "0.1.0", path = "../crates/fey_color" }
fey_grid = { version = "0.1.0", path = "../crates/fey_grid" }
fey_guid = { version = "0.1.0", path = "../crates/fey_guid" }
fey_img = { version = "0.1.0", path = "../crates/fey_img" }
fey_math = { version = "0.1.0", path = "../crates/fey_math" }
fey_packer = { version = "0.1.0", path = "../crates/fey_packer" }
fey_rand = { version = "0.1.0", path = "../crates/fey_rand" }
fnv = "1.0.7"
gilrs = "0.11.0"
naga = { version = "27.0.3", features = ["wgsl-in", "stderr"] }
png = "0.18.0"
pollster = "0.4.0"
qoi = "0.4.1"
rand = "0.9.2"
rand_core = "0.9.3"
serde = { version = "1.0.228", features = ["derive"] }
smallvec = { version = "1.15.1", features = ["const_generics"] }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
wgpu = "27.0.1"
winit = "0.30.12"
