[package]
name = "fey_color"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
approx = "0.5.1"
bytemuck = "1.24.0"
fey_math = { version = "0.1.0", path = "../fey_math" }
serde = { version = "1.0.228", features = ["derive"] }
