[package]
name = "fey_guid"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
