[package]
name = "fey_img"
version = "0.1.1"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Image encoding, decoding, and manipulation."

[features]
lua = ["dep:mlua", "dep:fey_lua", "fey_math/lua", "fey_color/lua"]

[dependencies]
bytemuck = "1.24.0"
fey_color = { version = "0.1.0", path = "../fey_color" }
fey_grid = { version = "0.1.0", path = "../fey_grid" }
fey_math = { version = "0.1.0", path = "../fey_math" }
png = "0.18.0"
qoi = "0.4.1"
serde = "1.0.228"
thiserror = "2.0.17"
fey_lua = { version = "0.1.0", path = "../fey_lua", optional = true }
mlua = { version = "0.11.5", features = ["lua54", "vendored"], optional = true }