[package]
name = "fey_rand"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
fey_math = { version = "0.1.0", path = "../fey_math" }
rand = "0.9.2"
rand_core = "0.9.3"
serde = { version = "1.0.228", features = ["derive"] }
