[package]
name = "fey_rand"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
description = "Random number generation."

[features]
lua = ["dep:mlua", "dep:fey_lua", "dep:fey_guid", "fey_guid/lua"]

[dependencies]
fey_lua = { version = "0.1.0", path = "../fey_lua", optional = true }
mlua = { version = "0.11.5", features = ["lua54", "vendored"], optional = true }
fey_math = { version = "0.1.0", path = "../fey_math" }
rand = "0.9.2"
rand_core = "0.9.3"
serde = { version = "1.0.228", features = ["derive"] }
fey_guid = { version = "0.1.0", path = "../fey_guid", features = ["lua"], optional = true }
