[package]
name = "kero"
version = "0.1.3"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A simple, approachable framework for creating 2D games in Rust and/or Lua."
homepage = "https://make-kero.games"
keywords = []
categories = []

[features]
lua = [
    "dep:mlua",
    "dep:fey_lua",
    "fey_color/lua",
    "fey_guid/lua",
    "fey_img/lua",
    "fey_math/lua",
    "fey_rand/lua"
]

[dependencies]
arrayvec = "0.7.6"
bytemuck = "1.24.0"
compact_str = "0.9.0"
directories = "6.0.0"
dpi = "0.1.2"
fey_color = { version = "0.1.0", path = "../fey_color" }
fey_font = { version = "0.1.0", path = "../fey_font" }
fey_grid = { version = "0.1.0", path = "../fey_grid" }
fey_guid = { version = "0.1.0", path = "../fey_guid" }
fey_img = { version = "0.1.0", path = "../fey_img" }
fey_lua = { version = "0.1.0", path = "../fey_lua", optional = true }
fey_math = { version = "0.1.0", path = "../fey_math" }
fey_packer = { version = "0.1.0", path = "../fey_packer" }
fey_rand = { version = "0.1.0", path = "../fey_rand" }
fnv = "1.0.7"
gilrs = "0.11.0"
mlua = { version = "0.11.5", features = ["lua54", "vendored"], optional = true }
naga = { version = "27.0.3", features = ["wgsl-in", "stderr"] }
pollster = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
smallvec = { version = "1.15.1", features = ["const_generics"] }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"
wgpu = { version = "27.0.1", default-features = false, features = ["dx12", "metal", "parking_lot", "std", "vulkan", "wgsl"] }
winit = "0.30.12"
