[package]
name = "kero_spr"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
lua = ["dep:mlua", "dep:fey_lua"]

[dependencies]
fey_ase = { version = "0.1.0", path = "../fey_ase" }
fey_lua = { version = "0.1.1", path = "../fey_lua", optional = true }
fnv = "1.0.7"
kero = { version = "0.1.11", path = "../kero" }
mlua = { version = "0.11.5", features = ["lua54", "vendored"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
