[package]
name = "kero_spr"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
description = "Variety of sprite rendering types for pixel art games made in Kero."

[features]
lua = ["dep:mlua", "dep:fey_lua", "kero/lua"]

[dependencies]
fey_ase = { version = "0.1.0", path = "../fey_ase" }
fey_font = { version = "0.1.1", path = "../fey_font" }
fey_lua = { version = "0.1.1", path = "../fey_lua", optional = true }
fey_packer = { version = "0.1.0", path = "../fey_packer" }
fnv = "1.0.7"
kero = { version = "0.2.0", path = "../kero" }
mlua = { version = "0.11.5", features = ["lua54", "vendored"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
